objects/Recurring_Payment__c.object
<CustomObject>
    <description>A custom object for storing recurring payment details in the EzyCharge</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Card_Expiry_Date__c</fullName>
        <label>Card Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Card_Last_Updated_On__c</fullName>
        <label>Card Last Updated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Card_Name__c</fullName>
        <label>Card Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Established__c</fullName>
        <label>Date Established</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ongoing</fullName>
                    <default>true</default>
                    <label>Ongoing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gateway_Name__c</fullName>
        <label>Gateway Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gateway_Reference_Id__c</fullName>
        <label>Not In Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gateway_Refund_Id__c</fullName>
        <label>Gateway Refund Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gateway_Schedule_Id__c</fullName>
        <label>Gateway Schedule Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installment_Period__c</fullName>
        <label>Installment Period</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Fortnightly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Six-monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Installment_Date__c</fullName>
        <label>Latest Installment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Installment_Date__c</fullName>
        <label>Next Installment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refund_Amount__c</fullName>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund_Date__c</fullName>
        <label>Refund Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Refund_Description__c</fullName>
        <description>Store the response while performing refund.</description>
        <label>Refund Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Refund_Status__c</fullName>
        <label>Refund Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting</fullName>
                </value>
                <value>
                    <fullName>Refunded</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedToId__c</fullName>
        <label>Related To Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secured_Token__c</fullName>
        <label>Secured Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Recurring Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Gateway_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Installment_Period__c</columns>
        <columns>Date_Established__c</columns>
        <columns>Next_Installment_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Closed_This_Month</fullName>
        <columns>NAME</columns>
        <columns>Gateway_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Installment_Period__c</columns>
        <columns>Date_Established__c</columns>
        <columns>Next_Installment_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed This Month</label>
    </listViews>
    <listViews>
        <fullName>Open_Recurring_Payments</fullName>
        <columns>NAME</columns>
        <columns>Gateway_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Installment_Period__c</columns>
        <columns>Date_Established__c</columns>
        <columns>Next_Installment_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open Recurring Payments</label>
    </listViews>
    <listViews>
        <fullName>Upcoming_Recurring_Payments</fullName>
        <columns>NAME</columns>
        <columns>Gateway_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Installment_Period__c</columns>
        <columns>Date_Established__c</columns>
        <columns>Next_Installment_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Next_Installment_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Upcoming Recurring Payments</label>
    </listViews>
    <listViews>
        <fullName>Weekly_Recurring_Payments</fullName>
        <columns>NAME</columns>
        <columns>Gateway_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Installment_Period__c</columns>
        <columns>Date_Established__c</columns>
        <columns>Next_Installment_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Installment_Period__c</field>
            <operation>equals</operation>
            <value>Weekly</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Weekly Recurring Payments</label>
    </listViews>
    <nameField>
        <displayFormat>RD-{0000}</displayFormat>
        <label>Recurring Payment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>